# open-webui-mcp-server

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/openwebui_mcp/: __init__.py  client.py  main.py
